--- a/src/components/mainTitlePage/mainTitle.css
+++ b/src/components/mainTitlePage/mainTitle.css
@@ -1,4 +1,5 @@
-h1{
+
+.h1-bg1 {
     color: white;
     background: url('../../assets/img/carousel1.jpg');
     -webkit-text-fill-color: transparent;
@@ -6,6 +7,16 @@ h1{
     background-position: center;
     background-size: cover;
     -webkit-text-stroke: 1px white;
-    /* font-size: 12rem; */
+    font-weight: 900;
+}
+
+.h1-bg2 {
+    color: white;
+    background: url('../../assets/img/carousel2.jpg');
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    background-position: center;
+    background-size: cover;
+    -webkit-text-stroke: 1px white;
     font-weight: 900;
 }
